@@ -221,14 +221,20 @@
     <dependency>
         <groupId>ognl</groupId>
         <artifactId>ognl</artifactId>
-        <version>3.0</version>
+        <version>3.0.5</version>
         <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+          </exclusion>
+        </exclusions>
     </dependency>
   
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
-      <version>3.14.0-GA</version>
+      <version>3.16.1-GA</version>
       <scope>compile</scope>
     </dependency>
   
